# SHA1-library-cpp

./: CMakeLists.txt  README.md
include/: library.hpp
src/: library.cpp  main.cpp
